--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TuksoSC</string>
-    <string name="action_settings">Settings</string>
+    <string name="mode_single">Singles</string>
+    <string name="mode_sequence">Sequence</string>
+    <string name="mode_shuffle">Shuffle</string>
 </resources>
